Widen player name container, prevent name overflow

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body {
 
   padding: 0 10px;
 
-  width: 120px;
+  width: 145px;
 }
 
 .scoreboard > * > img {
